# phongthuyso_python

./: .cursor.rule  PRD.md  README.md  __init__.py  api.md  architecture.md  asgi.py  chat_test_script.py  check_memory_users.py  check_mongodb_users.py  create_test_user.py  final_test_script.py  interface.md  main.py  mcp_simple_test.py  prompt.py  pyproject.toml  registry.py  requirements.txt  run_app_debug.py  run_app_with_seed.py  run_fixed_app.py  run_with_mock.py  task-log.md  test_analyze.py  test_api.py  test_batcuclinh_so_api.py  test_e2e.py  test_mongodb.py  test_phone_analysis.py  test_root_agent.py
agents/: __init__.py  agent_types.py  base_agent.py
agents/batcuclinh_so_agent/: __init__.py  agent.py
agents/payment_agent/: __init__.py  agent.py  models.py
agents/root_agent/: __init__.py  agent.py
agents/tools/: memory.py  mongodb_tools.py
agents/user_agent/: __init__.py  agent.py  models.py
constants/: __init__.py  bat_tinh.py  combinations.py  digit_meanings.py  response_factors.py
frontend_test/: frontend_demo.html  frontend_demo.js
phongthuyso_python/: README.md
shared_libraries/: __init__.py  logger.py  models.py  types.py  utils.py
shared_libraries/database/: README.md  __init__.py  models.py  mongodb.py  test_connection.py
static/css/: style.css
templates/: index.html
testingscript/: debug_imports.py  mock_batcuclinh_so_agent.py  seed_data.py  test_api.py  test_script.py
tools/batcuclinhso_analysis/: bank_account_analyzer.py  cccd_analyzer.py  fengshui_data.py  number_analyzer.py  password_analyzer.py  (+2 more)
utils/: common.py
(+35 files in other folders)
